# retrolire

./: .clang-format  .gitignore  Makefile  README.md  TEST.bib  config.h  init.sh  pyproject.toml  schema.sql
bash/: completion.bash  protolire  retrolire
csl2psql/: cli.py  getref.py
csl2psql/cslminitools/: cli.py  csl.py
csl2psql/isbndoi2csl/: getref.py
csl2psql/json2psql/: cli.py  obj2row.py
fetchref/: cli.py
img/: citations-syntaxe.md  quote-becker.md
src/: add_entries.c  add_entries.h  commands.c  commands.h  edit.c  edit.h  main.c  pgpopen2.c  pgpopen2.h  print.c  print.h  sizes.h  stmt.c  stmt.h  underscore.c  underscore.h  util.c  util.h
templates/: article.bib  book.bib  inproceeding.bib  misc.bib
