[project]
name = "retrolire"
authors = [{name="thjbdvlt"}]
version = "0.1.0"
description = "command line bibliography management with fzf and postgresql"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "psycopg",
    "orjson",
    "pdfannots @ git+https://github.com/thjbdvlt/pdfannots",
    "pymupdf",
    "isbntools",
]

[project.urls]
Homepage = "https://github.com/thjbdvlt/retrolire"

[project.scripts]
jsonarray2psql = "csl2psql.json2psql.cli:main"
csljson-update = "csl2psql.cslminitools.cli:main"
csl2psql = "csl2psql.cli:main"
pdfannots = "pdfannots.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}

[tool.ruff]
exclude = []
line-length = 72

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = false
